--- a/src/main/java/com/mycompany/apiconnection/ChatGUI.form
+++ b/src/main/java/com/mycompany/apiconnection/ChatGUI.form
@@ -35,7 +35,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="serverRB" min="-2" pref="98" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="clientBTN" min="-2" pref="98" max="-2" attributes="0"/>
+                      <Component id="clientRB" min="-2" pref="98" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="jScrollPane1" alignment="1" min="-2" pref="450" max="-2" attributes="0"/>
@@ -64,7 +64,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="modeLBL" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="serverRB" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="clientBTN" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="clientRB" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="28" max="32767" attributes="0"/>
           </Group>
@@ -94,6 +94,9 @@
         <Property name="text" type="java.lang.String" value="Send"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="sendBTNActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="modeLBL">
       <Properties>
@@ -111,7 +114,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="serverRBActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JRadioButton" name="clientBTN">
+    <Component class="javax.swing.JRadioButton" name="clientRB">
       <Properties>
         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
           <ComponentRef name="connectionRBG"/>
@@ -119,7 +122,7 @@
         <Property name="text" type="java.lang.String" value="Client"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="clientBTNActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="clientRBActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
