--- a/src/main/java/com/mycompany/apiconnection/SummaryGUI.form
+++ b/src/main/java/com/mycompany/apiconnection/SummaryGUI.form
@@ -6,6 +6,7 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="cc" green="33" red="0" type="rgb"/>
     </Property>
+    <Property name="name" type="java.lang.String" value="summaryFrame" noResource="true"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
