--- a/src/main/java/com/mycompany/apiconnection/ChatGUI.form
+++ b/src/main/java/com/mycompany/apiconnection/ChatGUI.form
@@ -7,6 +7,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Cryptochaun"/>
     <Property name="name" type="java.lang.String" value="chatFrame" noResource="true"/>
   </Properties>
   <SyntheticProperties>
