--- a/src/main/java/com/mycompany/apiconnection/SummaryGUI.form
+++ b/src/main/java/com/mycompany/apiconnection/SummaryGUI.form
@@ -78,6 +78,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Cryptochaun"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="cc" green="33" red="0" type="rgb"/>
     </Property>
