--- a/src/main/java/com/mycompany/apiconnection/SummaryGUI.form
+++ b/src/main/java/com/mycompany/apiconnection/SummaryGUI.form
@@ -351,9 +351,10 @@
         <Component class="javax.swing.JComboBox" name="modeCB">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="2">
+              <StringArray count="3">
                 <StringItem index="0" value="News"/>
                 <StringItem index="1" value="Prices"/>
+                <StringItem index="2" value="Leaderboard"/>
               </StringArray>
             </Property>
           </Properties>
