--- a/src/main/java/com/mycompany/apiconnection/NewsGUI.form
+++ b/src/main/java/com/mycompany/apiconnection/NewsGUI.form
@@ -82,6 +82,10 @@
             <Component class="javax.swing.JEditorPane" name="readerEP">
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
+                <Property name="disabledTextColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="0" green="0" red="0" type="rgb"/>
+                </Property>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
             </Component>
           </SubComponents>
