Added registration and verification forms. Implemented an e-mail service API. Existing accounts may have to be reclaimed following the new process. The news reader has also been slightly polished. Unfortunately, because the repository is public I cannot hardcode the email API.

--- a/src/main/java/com/mycompany/apiconnection/ChatGUI.form
+++ b/src/main/java/com/mycompany/apiconnection/ChatGUI.form
@@ -69,6 +69,8 @@
                       <Component id="serverRB" min="-2" pref="98" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="clientRB" min="-2" pref="98" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                      <Component id="endBTN" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="backBTN" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
@@ -99,7 +101,10 @@
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="backBTN" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="backBTN" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="endBTN" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -168,6 +173,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="backBTNActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="endBTN">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="End Chat"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="endBTNActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
